# nua

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
examples/: Makefile.am  Makefile.in  test
examples/complex/: arithematic.lua  arithematic.lua.txt  conjugate.lua  conjugate.lua.txt  element.lua  element.lua.txt
examples/elementary-operation/: arithmatic.lua  arithmatic.lua.txt  determinant.lua  equation.lua  equation.lua.txt  inv.lua  inv.lua.txt  setget.lua  setget.lua.txt  transpose.lua  transpose.lua.txt  wierd_product.lua  wierd_product.lua.txt
examples/finding-roots/: equation.lua  equation.lua~
include/nua/: nua.h  nuamatrix.h
include/nuac/: nuac.h  nuac_determinant.h  nuac_linear_algebra.h  nuac_matrix.h  nuac_vector.h
libcnua/: Makefile.am  Makefile.in  cnua.cc
libnua/: Makefile.am  Makefile.in  nua.cc  nua_complex.cc  nua_complex.h  nua_math.cc  nua_math.h  nua_matrix.cc  nua_matrix.h  nua_vector.cc  nua_vector.h
