exampledir=$(prefix)/share/nua
example_DATA=../examples/elementary-operation/arithmatic.lua\
		   ../examples/elementary-operation/determinant.lua\
		   ../examples/elementary-operation/inv.lua\
		   ../examples/elementary-operation/setget.lua\
		   ../examples/elementary-operation/transpose.lua\
		   ../examples/elementary-operation/wierd_product.lua\
		   ../examples/elementary-operation/equation.lua\
		   ../examples/complex/arithematic.lua\
		   ../examples/complex/conjugate.lua\
		   ../examples/complex/element.lua
EXTRA_DIST=${example_DATA}
