lib_LTLIBRARIES=libcnua.la
libcnua_la_SOURCES=cnua.cc
includedir=$(prefix)/include/nuac
include_HEADERS=../include/nuac/nuac.h \
		../include/nuac/nuac_matrix.h \
		../include/nuac/nuac_vector.h \
		../include/nuac/nuac_linear_algebra.h \
		../include/nuac/nuac_determinant.h
EXTRA_DIST=cnua.cc
AM_CPPFLAGS=-I../include
AM_LDFLAGS=-release 0.1
